# fincrime-agents

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml
data/: population_stats.json
scripts/: export_alerts.py
src/fincrime_agents/: __init__.py  reward.py  schemas.py
src/fincrime_agents/data/: __init__.py  augment.py  build_cases.py  download_sanctions.py  split.py
tests/: conftest.py  test_augment.py  test_config.py  test_reward.py  test_split.py
