[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fincrime-agents"
version = "0.1.0"
description = "A lean multi-agent financial-crime investigator built on LangGraph, powered by a small DoRA+GRPO-adapted local LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alejandro Torres", email = "alejandrotormun@gmail.com" }]
dependencies = [
    "langchain>=1.3",
    "langgraph>=1.2",
    "langchain-ollama>=1.1",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "rapidfuzz>=3.6",
    "python-dotenv>=1.0",
    "truststore>=0.10.4",
]

# Dev tooling lives in dependency groups (PEP 735). `uv sync` installs the default `dev`
# group automatically; add others with `uv sync --group <name>`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.7",
]
# GPU training stack (Unsloth: DoRA-SFT + GRPO). Deliberately empty until the PR that
# starts training pins versions after the 6GB-VRAM spike — keeps uv.lock light and CI
# CUDA-free until then. The graph runtime never needs these (Ollama serves the model).
train = []
# Real web search for the external-context agent. The offline stub is the default
# provider; CI never installs or uses this.
search = [
    "tavily-python>=0.5",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/fincrime_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
